# template_repo

./: README.md  main.py  pyproject.toml  run_me_first.sh
.devcontainer/: Dockerfile  devcontainer.json  setup_git.sh
.github/workflows/: initial_setup.yml
