[project]
name = "python_template_repo"
version = "0.1.0"
description = "A Python template repository."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "uvicorn>=0.22.0,<0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.289,<0.0.290",
    "pyright>=1.1.320,<1.1.321",
    "black>=23.9.1,<23.9.2",
]


[tools.uv]
default-groups = []
prealease = "if-necessaery-or-explicit"
